--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   "author": "Hari Prasath",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.0.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "node-fetch": "^3.4.2",
     "socket.io": "^4.8.1",
-    
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
     "@google/generative-ai": "^0.5.0"
   },
   "devDependencies": {
