--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express-async-handler": "^1.2.0",
     "dayjs": "^1.11.13",
     "nanoid": "^4.0.2",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
